--- a/app/templates/dj.html
+++ b/app/templates/dj.html
@@ -196,7 +196,7 @@
             console.log("we are listening");
             const [shazam_title, shazam_artist] = await shazam();
             console.log(shazam_title, req_song_titles[i],shazam_artist, req_song_artists);
-            if (areSimilarCaseInsensitive(shazam_title, req_song_titles[i]) && areSimilarCaseInsensitive(shazam_artist, req_song_artists)) {
+            if (areSimilarCaseInsensitive(shazam_title, req_song_titles[i]) && areSimilarCaseInsensitive(shazam_artist, req_song_artists[i])) {
               song_match = true;
             }
 
