revamping Next>>'s UI

--- a/app/templates/exit.html
+++ b/app/templates/exit.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- Session controls -->
         <div class="card flex">
-          <h2 > Thank You For Attending The Event, See You Later!</h2>
+          <h2 > You or the DJ have stopped the event. Thank You For Attending The Event, See You Later!</h2>
         </div>
     </div>
 
