--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -44,16 +44,12 @@
         
     </div>
 
-    <script>
-      
-      // window.onload = fetchData_user();   
+    <script> 
       
       let req_id = []; 
       const room = 'interaction_'+localStorage.getItem('djId_user')+'_'+localStorage.getItem('userId');
 
       const socket = io.connect('https://' + document.domain + ':' + location.port, { transports: ["websocket"], });
-
-    
 
       socket.on('connect', function() {
         console.log('Websocket connected! ', room);
@@ -67,13 +63,18 @@
         fetchData_user();
         console.log("Update received!"); 
 
-    });
+      });
 
-    socket.on('req_created',(data)=>{
+      socket.on('req_created',(data)=>{
         
         fetchData_user();
         console.log("creation completed!");
-    });
+      });
+
+      socket.on('exit_user', (data)=>{
+          console.log('yep');
+          endEvent();
+      });
 
       function createRequest(){
 
@@ -114,8 +115,6 @@
         // location.reload();
 
       }
-
-      
 
       function fetchData_user(){
         dat= {}
@@ -221,7 +220,7 @@
 
       function endEvent(){
         console.log('deletion of request started...')
-        send = {'req_id': req_id, 'room':room};
+        send = {'req_id': req_id, 'room':room, 'access':'user'};
         fetch("{{ url_for('end_session') }}", 
           {
             method: "POST",
