--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -92,7 +92,7 @@
                 }else{
                     localStorage.setItem('djId_dj', dat['id']);
 
-                    window.location.href = "{{ url_for('djentry') }}";
+                    window.location.href = "{{ url_for('dj_dashboard') }}";
                 }
 
             })
